// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "medium" 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
}"
`;

exports[`getComponentCss() should return correct css for size: "small" 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: 1rem;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"} 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
.scroller {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: 1rem;
}
@media(min-width:480px) {
  .scroller {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  }
}

@media(min-width:760px) {
  .scroller {
    font-size: 1rem;
  }
}

@media(min-width:1000px) {
  .scroller {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  }
}

@media(min-width:1300px) {
  .scroller {
    font-size: 1rem;
  }
}

@media(min-width:1760px) {
  .scroller {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  }
}
"
`;
